--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <div class="card-body">
               <div class="input-group input-group-lg">
                 <div class="input-group mb-3">
-                  <input id="cityInput" type="text" class="form-control" placeholder="City" aria-label="City"
-                    aria-describedby="button-addon2">
+                  <input id="cityInput" type="text" class="form-control" placeholder="City" aria-label="City" aria-describedby="button-addon2">
                   <div class="input-group-append">
-                    <button class="btn btn-primary search" type="button">Search</button>
+                    <button class="btn btn-primary search" type="button" id = "button-addon2">Search</button>
                   </div>
                 </div>
               </div>
